<resources>
    <string name="app_name">Rahma_khlifa_Mesure_Glycemie</string>
    <string name="text">Mesure de niveau de \n Glycémie</string>
    <string name="tvAgeText">Votre Age</string>
    <string name="jeuntext">Est ce que vous jeunez</string>
    <string name="textOui">oui\n</string>
    <string name="textNon">non\n</string>
    <string name="consultation">Consultation</string>
    <string name="email" />
    <string name="mot_de_passe" />
    <string name="nom_utilisateur">Nom utilisateur</string>
</resources>