<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_background"
    tools:context=".MainActivity"
    android:padding="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/playfair_display"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/text"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tvAgeText"
        android:textColor="@color/black"
        android:textSize="25sp"/>
        <SeekBar
            android:id="@+id/sbAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:max="120"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/line_shape"

        />
    <TextView
        android:id="@+id/textjeune"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/jeuntext"
        android:textColor="@color/black"
        android:textSize="25sp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <RadioButton
            android:id="@+id/rbtOui"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/textOui"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <RadioButton
            android:id="@+id/rbtNon"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/textNon"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RadioGroup>
    <EditText
        android:id="@+id/etValeur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="Valeur mesurée (en mmol/l)"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textSize="25sp" />
    <Button
        android:id="@+id/btnConsulter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="Consulter"
        android:textColor="@color/black"
        android:textSize="18sp"
       />
    <TextView
        android:id="@+id/tvReponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:padding="40dp"
        android:text="..."
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

  </LinearLayout
   >